@@ -1837,5 +1837,7 @@ cl_symbols[] = {
 
 {SYS_ "*QUIT-TAG*",NULL},
 
+{EXT_ "ARRAY-RAW-DATA","si_array_raw_data"},
+
 /* Tag for end of list */
 {NULL,NULL}};
